# protolab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  TRADEMARK.md  pyproject.toml
docs/: concepts.md  configuration.md  correction-schema.md  integration.md  resynthesis.md
docs/internal/: architecture.md  spec.md
examples/full-loop/: corrections.toml  protocol-v1.md  protocol-v2.md  protolab.toml  resynthesis-prompt.md  rules.toml
examples/quickstart/: corrections.toml  protocol.md  protolab.toml
src/protolab/: __init__.py  analyze.py  api.py  check.py  cli.py  config.py  correct.py  import_cmd.py  init_cmd.py  llm.py  resynthesis.py  serve.py  status.py  store.py  types.py
src/protolab/adapters/: __init__.py  base.py  braintrust.py  export.py  generic.py  promptfoo.py
tests/: conftest.py  test_adapters.py  test_analyze.py  test_api.py  test_braintrust.py  test_check.py  test_cli.py  test_config.py  test_correct.py  test_export.py  test_generic_adapter.py  test_import.py  test_init_cmd.py  test_promptfoo.py  test_resynthesis.py  test_serve.py  test_status.py  test_store.py  test_webhook.py
