[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protolab"
version = "0.1.0"
description = "Error-driven compression for system prompts and protocol documents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Rían" }]
keywords = ["protocol", "refinement", "prompt-engineering", "compression", "human-in-the-loop", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ai = ["anthropic>=0.39.0"]
serve = ["fastapi>=0.100.0", "uvicorn[standard]>=0.20.0"]
dev = ["pytest>=7.0", "pytest-tmp-files>=0.0.2", "httpx>=0.24.0"]

[project.scripts]
protolab = "protolab.cli:main"
plab = "protolab.cli:main"

[project.urls]
Homepage = "https://github.com/rianczerwinski/protolab"
Documentation = "https://github.com/rianczerwinski/protolab/tree/main/docs"
Issues = "https://github.com/rianczerwinski/protolab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/protolab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
